--- a/cientificos/pom.xml
+++ b/cientificos/pom.xml
@@ -28,6 +28,27 @@
   </build>
 	
   <dependencies>
+  		<!-- Hibernate library -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.2.15.Final</version>
+		</dependency>
+
+		<!-- HSQLDB Java Connector library -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.4</version>
+		</dependency>
+		
+		<!-- Log4j library -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+  
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
