--- a/cientificos/pom.xml
+++ b/cientificos/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8.1</version>
 		</dependency>
+		
+		<!-- Apache Commons Collections -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+		    <version>4.3</version>
+		</dependency>
 
 		<!-- JUnit -->
 		<dependency>
