Tentando evitar conflitos

--- a/cientificos/pom.xml
+++ b/cientificos/pom.xml
@@ -28,7 +28,7 @@
 	</build>
 	
 	<dependencies>
-		<!-- Apache Commons -->
+		<!-- Apache Commons Lang -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
