--- a/cientificos/pom.xml
+++ b/cientificos/pom.xml
@@ -42,6 +42,27 @@
 		    <version>4.3</version>
 		</dependency>
 
+		<!-- Hibernate library -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.2.15.Final</version>
+		</dependency>
+
+		<!-- HSQLDB Java Connector library -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		
+		<!-- Log4j library -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.2</version>
+		</dependency>
+
 		<!-- JUnit -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
